# sweetblog

./: .gitignore  README.md  pyproject.toml
docs/: authentication.md
src/sweetblog/: admin.py  api_views.py  apps.py  fields.py  forms.py  managers.py  middlewares.py  models.py  serializers.py  test_auth.py  urls.py  utils.py  views.py  widgets.py
src/sweetblog/management/commands/: create_fake_data.py  send_newsletter.py
src/sweetblog/migrations/: 0001_initial.py
src/sweetblog/static/sweetblog/github/: github-markdown.css
src/sweetblog/static/sweetblog/js/: article.js  device-persistence.js
src/sweetblog/templates/admin/sweetblog/markdownarticle/: change_list.html
src/sweetblog/templates/notifier/new_comment/: email.mjml  email.txt
src/sweetblog/templates/notifier/newsletter/: email.html  email.mjml  email.txt
src/sweetblog/templates/notifier/verification_code/: email.html  email.mjml  email.txt
src/sweetblog/templates/sweetblog/: article_detail.html  collection_detail.html  collection_list.html  home.html  search.html  tag_detail.html  tag_list.html
src/sweetblog/templates/sweetblog/email/: verification_code.html
src/sweetblog/templates/sweetblog/mvp/: base.html
src/sweetblog/templates/sweetblog/pico/: article_form.html  base.html  markdown_page.html  page_form.html
src/sweetblog/templates/sweetblog/pico/auth/: code.html  connection.html  (+1 more)
src/sweetblog/templates/sweetblog/sakura/: base-radical.html  base.html  markdown_page.html  page_form.html
tests/: manage.py  sweetblog
tests/testsweetblog/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
